# perfecttin

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README  README.md  ReleaseNotes.md  TODO  adjelev.cpp  adjelev.h  angle.cpp  angle.h  arc.cpp  arc.h  bezier3d.cpp  bezier3d.h  binio.cpp  binio.h  boundrect.cpp  boundrect.h  brevno.cpp  brevno.h  carlsontin.cpp  carlsontin.h  ciaction.cpp  ciaction.h  cidialog.cpp  cidialog.h  cloud.cpp  cloud.h  cogo.cpp  cogo.h  cogospiral.cpp  cogospiral.h  color.cpp  color.h  config.h.in  configdialog.cpp  configdialog.h  (+96 more)
cmake/Modules/: FindLibPLYXX.cmake  FindMitobrevno.cmake  FindPlytapus.cmake
doc/: CMakeLists.txt  fileformat.xml  perfecttin.xml  triroot.ggb  triroot.jl
